--- a/Kaidee/Dockerfile
+++ b/Kaidee/Dockerfile
@@ -3,10 +3,7 @@ MAINTAINER Rajdeep Dua "dua_rajdeep@yahoo.com"
 RUN apt-get update -y
 RUN apt-get install -y python-pip python-dev build-essential
 RUN apt-get install -y libmysqlclient-dev
-RUN apt-get update && apt-get install -y libmagickwand-6.q16-dev --no-install-recommends \
- && ln -s /usr/lib/x86_64-linux-gnu/ImageMagick-6.8.9/bin-Q16/MagickWand-config /usr/bin \
- && pecl install imagick \
- && echo "extension=imagick.so" > /usr/local/etc/php/conf.d/ext-imagick.ini
+RUN apt-get -y update && apt-get install -y libmagickwand-dev --no-install-recommends && rm -rf /var/lib/apt/lists/*
 COPY . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
